src/objects/Request_Types__mdt.object
<CustomObject>
    <fields>
        <fullName>CaseType_Name_Origin__c</fullName>
        <label>CaseType Name / Origin</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>CaseType</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Ids__c</fullName>
        <label>Plan Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <label>Request Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Request Types</label>
    <listViews>
        <fullName>CRM</fullName>
        <columns>MasterLabel</columns>
        <columns>CaseType_Name_Origin__c</columns>
        <columns>CaseType__c</columns>
        <columns>Plan_Ids__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseType__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <label>CRM</label>
    </listViews>
    <listViews>
        <fullName>Non_CRM</fullName>
        <columns>MasterLabel</columns>
        <columns>CaseType_Name_Origin__c</columns>
        <columns>Request_Name__c</columns>
        <columns>Plan_Ids__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseType_Name_Origin__c</field>
            <operation>notEqual</operation>
            <value>CRM</value>
        </filters>
        <label>Non-CRM</label>
    </listViews>
    <pluralLabel>Request Types</pluralLabel>
</CustomObject>